agregando enlace githuba al proyecto

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
 
             <footer class="created"> 
                   <p> By: Willian Sang.</p> 
-                  <a href="#"> <img src="Icons/github.svg"> </a>
+                  <a href="https://github.com/WillianSang/Task-List"> <img src="Icons/github.svg"> </a>
                   
             </footer>
 
