--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
             <!-- Titulo y formulario de la TaskList -->
             <h1 class="title"> TO - DO </h1>
             <div class="search">
-                  <form> 
-                        <input type=" text"  placeholder="    Agregue nueva task">
+                  <form class="input__box"> 
+                        <input type=" text"  placeholder="Ingrese nueva Task ">
                         <button class="buton"> Add task </button>
                   </form>
             </div>
@@ -34,8 +34,7 @@
 
             <footer class="created"> 
                   <p> By: Willian Sang.</p> 
-                  <a href="https://github.com/WillianSang/Task-List"> <img src="Icons/github.svg"> </a>
-                  
+                  <a href="https://github.com/WillianSang/Task-List" target="_blank"> <img src="Icons/github.svg"> </a>
             </footer>
 
       </div>
